# pt_skp_ota_analyst

./: .gitignore  README.md  agoda-scraping.py  agoda_reviews_9_1_2026.csv  agoda_reviews_clean.csv  agoda_reviews_final.csv  bug_tripadvisor_scraping.py  container_smart_stay_agoda.py  data_tripadvisor.xlsx  data_tripadvisor_fixed_final.csv  data_tripadvisor_fixed_v2.csv  dlv_agoda.py  dlv_agoda_analysis.ipynb  dlv_agoda_reviews.csv  dlv_bookingcom.ipynb  harga_hotel_organic_113844.xlsx  harga_hotel_organic_114503.xlsx  harga_hotel_ultimate_135552.xlsx  harga_hotel_v10_20260220_155640.xlsx  harga_hotel_v5_20260220_144350.xlsx  harga_hotel_v7_20260220_145908.xlsx  harga_hotel_v9_20260220_153424.xlsx  harga_hotel_v9_20260220_154529.xlsx  hasil_review_hotel.csv  pondok_pitaya_agoda.py  pondok_pitaya_bookingcom.ipynb  pt_skp.rar  requirements_2.txt  run.py  scrape_google_hotel.py  scraping-tiket.py
GoogleReviewScrape/: .gitignore  CHANGELOG.md  README.md  api_server.py  config.businesses.sample.yaml  config.sample.yaml  constraints.txt  pyproject.toml  requirements.txt  start.py
GoogleReviewScrape/docs/: ARCHITECTURE.md  TROUBLESHOOTING.md
GoogleReviewScrape/gr_venv/: pyvenv.cfg
GoogleReviewScrape/modules/: api_keys.py  cli.py  config.py  data_logic.py  data_storage.py  database_backend.py  date_converter.py  date_filter.py  image_handler.py  job_manager.py  log_manager.py  migration.py  models.py  pipeline.py  place_id.py  review_db.py  s3_handler.py  scraper.py  selector_health.py  sub_rating_labels.py  utils.py
GoogleReviewScrape/tests/: README.md  conftest.py  test_api_concurrency.py  test_api_keys.py  test_cli.py  test_config.py  test_content_hash.py  test_database_backend.py  test_date_filter.py  test_log_manager.py  (+12 more)
(+66 files in other folders)
